# matrixrain-plasma6

./: .gitignore  CHANGELOG.md  README.md  UPGRADE_GUIDE.md  debug.sh  install.sh
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  mqtt-specs.md
package/: metadata.json
package/contents/code/: mqttworker.js
package/contents/config/: main.xml
package/contents/ui/: ARCHITECTURE.md  config.qml  main.qml  mqttClient.js
package/contents/ui/components/: MQTTDebugOverlay.qml  MatrixCanvas.qml
package/contents/ui/renderers/: ClassicRenderer.qml  HorizontalInjectRenderer.qml  HorizontalInlineRenderer.qml  HorizontalOverlayRenderer.qml  MixedModeRenderer.qml  MqttDrivenRenderer.qml  MqttOnlyRenderer.qml
package/contents/ui/utils/: ColorUtils.js  MatrixRainLogic.js
plugin/: CMakeLists.txt  mqttclient.cpp  mqttclient.h  plugin.cpp  qmldir
